force-app/main/default/objects/CSV_File_Upload_Object__mdt/CSV_File_Upload_Object__mdt.object-meta.xml
<CustomObject>
    <label>CSV File Upload Object</label>
    <pluralLabel>CSV File Upload Objects</pluralLabel>
</CustomObject>