force-app/main/default/objects/CSV_File_Upload_Object__mdt/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <referenceTo>Application__mdt</referenceTo>
    <relationshipLabel>CSV File Upload Objects</relationshipLabel>
    <relationshipName>CSV_File_Upload_Objects</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>