force-app/main/default/objects/CSV_File_Upload_Object__mdt/fields/Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Object_Label__c</fullName>
    <label>Data Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>