force-app/main/default/objects/CSV_File_Upload_Object__mdt/fields/Parent_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Id__c</fullName>
    <label>Parent Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>